@@ -484,12 +484,21 @@ class CourseApplicationServiceTest extends AbstractIntegrationTest {
             assertThatThrownBy(() -> sut.addReview("notExistCourseId", reviewer.id(), "좋은 코스입니다", 4))
                     .isInstanceOf(NoSuchElementException.class);
         }
+
+        @Test
+        void 이미_리뷰를_작성한_유저가_추가하면_예외가_발생한다() {
+            sut.addReview(courseId, reviewer.id(), "좋은 코스입니다", 4);
+
+            assertThatThrownBy(() -> sut.addReview(courseId, reviewer.id(), "또 쓰는 리뷰", 3))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
     }
 
     @Nested
     class 리뷰_삭제 {
 
         private User reviewer;
+        private User otherUser;
         private String courseId;
         private String reviewId;
 
@@ -497,6 +506,7 @@ class CourseApplicationServiceTest extends AbstractIntegrationTest {
         void setUp() {
             User courseCreator = dbUtil.saveUser(new User(UserProvider.KAKAO, "creatorProviderId"));
             reviewer = dbUtil.saveUser(new User(UserProvider.KAKAO, "reviewerProviderId"));
+            otherUser = dbUtil.saveUser(new User(UserProvider.KAKAO, "otherProviderId"));
 
             Course course = new Course(null, new CourseName("테스트 코스"), List.of(
                     new Coordinate(37.5180, 127.0280),
@@ -507,7 +517,7 @@ class CourseApplicationServiceTest extends AbstractIntegrationTest {
 
             courseId = dbUtil.saveCourse(course).id();
             sut.addReview(courseId, reviewer.id(), "좋은 코스입니다", 5);
-            reviewId = dbUtil.findCourseById(courseId).reviews().get(0).id();
+            reviewId = dbUtil.findCourseById(courseId).reviews().getFirst().id();
         }
 
         @Test
@@ -516,14 +526,6 @@ class CourseApplicationServiceTest extends AbstractIntegrationTest {
 
             Course result = dbUtil.findCourseById(courseId);
             assertThat(result.reviews()).isEmpty();
-        }
-
-        @Test
-        void 리뷰를_삭제하면_averageRating이_0으로_재계산된다() {
-            sut.deleteReview(courseId, reviewId, reviewer.id());
-
-            Course result = dbUtil.findCourseById(courseId);
-            assertThat(result.averageRating()).isEqualTo(0.0);
         }
 
         @Test
@@ -537,75 +539,11 @@ class CourseApplicationServiceTest extends AbstractIntegrationTest {
             assertThatThrownBy(() -> sut.deleteReview(courseId, "notExistReviewId", reviewer.id()))
                     .isInstanceOf(NoSuchElementException.class);
         }
-    }
-
-    @Nested
-    class 리뷰_신고 {
-
-        private User reporter;
-        private String courseId;
-        private String reviewId;
-
-        @BeforeEach
-        void setUp() {
-            User courseCreator = dbUtil.saveUser(new User(UserProvider.KAKAO, "creatorProviderId"));
-            reporter = dbUtil.saveUser(new User(UserProvider.KAKAO, "reporterProviderId"));
-
-            Course course = new Course(null, new CourseName("테스트 코스3"), List.of(
-                    new Coordinate(37.5180, 127.0280),
-                    new Coordinate(37.5175, 127.0270),
-                    new Coordinate(37.5170, 127.0265),
-                    new Coordinate(37.5180, 127.0280)
-            ), courseCreator);
-
-            courseId = dbUtil.saveCourse(course).id();
-
-            sut.addReview(courseId, courseCreator.id(), "좋은 코스입니다", 5);
-
-            reviewId = dbUtil.findCourseById(courseId).reviews().get(0).id();
-        }
 
         @Test
-        void 리뷰_신고가_DB에_저장된다() {
-            Course course = dbUtil.findCourseById(courseId);
-
-            sut.reportReview(courseId, reviewId, reporter.id());
-
-            var result = dbUtil.findCourseById(courseId);
-            Review review = result.getReview(reviewId);
-            assertThat(review.reportUserIds()).containsExactly(reporter.id());
-        }
-
-        @Test
-        void 두_명이_신고하면_두_개의_신고가_DB에_저장된다() {
-            User reporter2 = dbUtil.saveUser(new User(UserProvider.KAKAO, "reporter2ProviderId"));
-
-            sut.reportReview(courseId, reviewId, reporter.id());
-            sut.reportReview(courseId, reviewId, reporter2.id());
-
-            Course result = dbUtil.findCourseById(courseId);
-            Review review = result.getReview(reviewId);
-            assertThat(review.reportUserIds()).hasSize(2)
-                    .containsExactlyInAnyOrder(reporter.id(), reporter2.id());
-        }
-
-        @Test
-        void 리뷰를_신고하면_알람이_간다() {
-            sut.reportReview(courseId, reviewId, reporter.id());
-
-            verify(courseAlerter, times(1)).alert(any(AlertContext.class));
-        }
-
-        @Test
-        void 리뷰를_두번_신고하면_알람이_두번_간다() {
-            User reporter2 = dbUtil.saveUser(new User(UserProvider.KAKAO, "reporter2ProviderId"));
-
-            sut.reportReview(courseId, reviewId, reporter.id());
-            sut.reportReview(courseId, reviewId, reporter2.id());
-
-            verify(courseAlerter, times(2)).alert(any(AlertContext.class));
+        void 작성자가_아닌_경우_삭제하면_예외가_발생한다() {
+            assertThatThrownBy(() -> sut.deleteReview(courseId, reviewId, otherUser.id()))
+                    .isInstanceOf(UnauthorizedException.class);
         }
     }
-
-
 }
